--- a/App/Info.plist
+++ b/App/Info.plist
@@ -5,13 +5,13 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>Shopciety</string>
+	<string>App</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.shopciety.ios</string>
+	<string>com.app.ios</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Shopciety</string>
+	<string>App</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
