--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@ buck-out/
 # Carthage
 #
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
-# Carthage/Checkouts
 
+Carthage/Checkouts
 Carthage/Build
 
 ### CocoaPods ###
