--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@ buck-out/
 #
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
 
-Carthage/Checkouts
+# Carthage/Checkouts/
+!Carthage/Checkouts/BUCK
 Carthage/Build
 
 ### CocoaPods ###
